# oggelang

./: '  .gitignore  .proj.vim  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/src/: ast.h  block_alloc.cpp  block_alloc.h  compiler.cpp  compiler.h  debug_info.cpp  debug_info.h  error.cpp  error.h  file_location.h  gen_bytecode.cpp  gen_bytecode.h  lexer.cpp  lexer.h  linker.cpp  linker.h  opcodes.cpp  opcodes.h  util.h
examples/: fibi.ogge
gui/: CMakeLists.txt
gui/src/: buffer.cpp  buffer.h  buffer_view.cpp  buffer_view.h  buttons.cpp  buttons.h  bytecode_view.cpp  bytecode_view.h  control_bar.cpp  control_bar.h  error_view.cpp  error_view.h  file_util.cpp  file_util.h  float_menu.cpp  float_menu.h  font.cpp  font.h  frame.h  gui_main.cpp  gui_main.h  output_view.cpp  output_view.h  types.h  variable_view.cpp  variable_view.h  view.cpp  view.h  view_select.cpp  view_select.h  window.cpp  window.h
highlighting/: ogge.vim
interpreter/: CMakeLists.txt
interpreter/src/: debugger.cpp  debugger.h  interpreter.cpp  stack.h
main/: CMakeLists.txt
main/src/: cli_debugger.cpp  cli_debugger.h  file_util.cpp  file_util.h  main.cpp
src/: ast.cpp  ast.h  block_alloc.cpp  compiler.cpp  compiler.h  error.cpp  error.h  file_location.h  file_reader.cpp  file_reader.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  linker.cpp  linker.h  main.cpp  opcodes.h  parser.cpp  parser.h
test_programs/: funka_int.ogge  long_test.ogge  new.ogge  other_file.ogge  test.ogge
